fix comment bubble spacing between timestamp and like count

--- a/src/styles/Comment.css
+++ b/src/styles/Comment.css
@@ -14,7 +14,7 @@
 
 .Comment .bubble {
   background-color: rgb(240, 242, 245);
-  min-width: 130px;
+  min-width: 145px;
   min-height: 51px;
   border-radius: 18px;
   box-sizing: border-box;
